make admin folder

--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,4 @@
 <div id="user"
-  data-users_path="<%= users_path %>"
+  data-users_path="<%= admin_users_path %>"
 ></div>
 <%= javascript_pack_tag "users/index" %>
